[refactor] create optimization.card,banner page

--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../public/output.css">
 </head>
 
-<body class="font-sans">
+<body>
     <main class="bg-[url('../images/Background-Color.svg')] bg-no-repeat bg-cover">
         <header>
-            <div class="container p-4 m-auto box-border">
+            <div class="container py-4 m-auto box-border">
                 <div class="flex justify-between">
                     <div>
                         <img src="../images/tvm-header-logo.svg" alt="">
                     </div>
-                    <ul class="flex gap-4 text-white uppercase">
+                    <ul class="flex gap-8 text-white uppercase text-sm">
                         <li class="cursor-pointer hover:text-white hover:underline">
                             Community
                         </li>
@@ -40,22 +45,117 @@
                             Github
                         </li>
                     </ul>
-                    <div class="">
+                    <div class="underline text-white">
                         ASF
                     </div>
                 </div>
             </div>
         </header>
         <section>
-            <div class="container m-auto">
-                <div class="grid justify-between grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-2 py-10">
-                    <div class="h-40 w-auto border-solid border-2 border-black-500">card 1</div>
-                    <div class="h-40 w-auto border-solid border-2 border-black-500">card 2</div>
-                    <div class="h-40 w-auto border-solid border-2 border-black-500">card 3</div>
+            <div class="container m-auto pb-32">
+                <div class="text-white mt-[169px]">
+                    <h1 class="text-[55px]">Apache (incubating) TVM
+                    </h1>
+                    <p class="text-2xl w-full lg:w-[555px]  2xl:w-[555px]">An End to End Deep Learning Compiler Stack
+                        for CPUs, GPUs and
+                        accelerators</p>
+                    <button class="mt-10 py-3 px-11 border-solid border-[1px] border-[#3C88B5] ">Get Started</button>
+                </div>
+                <div class="flex justify-end">
+                    <p class="text-white w-full lg:w-[555px] 2xl:w-[555px] mt-[22px] lg:mr-[250px] 2xl:mr-[250px]">
+                        Apache (incubating) TVM is an open source deep
+                        learning compiler stack for CPUs, GPUs, and machine learning accelerators. It aims to enable
+                        machine learning engineers to optimize and run computations efficiently on any hardware backend.
+                    </p>
                 </div>
             </div>
         </section>
     </main>
+    <section class="container m-auto">
+        <div class="flex flex-col lg:flex-row 2xl:flex-row gap-16 py-6 items-center justify-center">
+            <img src="../images/AutoOptimization.svg" alt="AutoOptimization">
+            <div>
+                <h3 class="text-2xl lg:mb-4 2xl:mb-4 text-[#252D5A]">
+                    About Apache TVM
+                </h3>
+                <p class="lg:w-[360px] text-[#252D5A]">
+                    TVM provides two levels of optimizations shown in the figure to the left.   
+                </p>
+                <div class="flex mt-6">
+                    <span class="text-[44px] text-[#252D5A]">1</span>
+                    <p class="about-tvm-para">
+                        Computational graph optimization to perform tasks such as high-level operator fusion, layout
+                        transformation, and memory management.   
+                    </p>
+                </div>
+                <div class="flex mt-6">
+                    <span class="text-[44px] text-[#252D5A]">2</span>
+                    <p class="about-tvm-para">
+                        Then a tensor operator optimization and code generation layer that optimizes tensor operators.
+                        More details can be found at the techreport.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container mx-auto my-[81px]">
+        <div class="flex flex-col max-w-5xl m-auto px-4">
+            <h1 class="text-5xl text-[#252D5A] w-full lg:w-[458px] xl:w-[458px] 2xl:[458px] leading-[55px]">
+                Key Features & Capabilities
+            </h1>
+            <div class="grid mt-8 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 gap-8 justify-items-center">
+                <div class="bg-[url('../images/items-bg-one.svg')] bg-no-repeat bg-cover w-[456px] h-[470px]">
+                    <div class="pl-12 pt-[94px]">
+                        <img src="../images/speed.svg" alt="" class="pb-4">
+                        <span class="text-white text-4xl">Performance</span>
+                        <p class="text-white text-base pt-2.5 w-[362px]">
+                            Compilation and minimal runtimes commonly unlock ML workloads on existing hardware.
+                        </p>
+                    </div>
+                </div>
+                <div class="bg-[url('../images/items-bg-one.svg')] bg-no-repeat bg-cover w-[456px] h-[470px]">
+                    <div class="pl-12 pt-[94px]">
+                        <img src="../images/speed.svg" alt="" class="pb-4">
+                        <span class="text-white text-4xl">Performance</span>
+                        <p class="text-white text-base pt-2.5 w-[362px]">
+                            Compilation and minimal runtimes commonly unlock ML workloads on existing hardware.
+                        </p>
+                    </div>
+                </div>
+                <div class="bg-[url('../images/items-bg-one.svg')] bg-no-repeat bg-cover w-[456px] h-[470px]">
+                    <div class="pl-12 pt-[94px]">
+                        <img src="../images/speed.svg" alt="" class="pb-4">
+                        <span class="text-white text-4xl">Performance</span>
+                        <p class="text-white text-base pt-2.5 w-[362px]">
+                            Compilation and minimal runtimes commonly unlock ML workloads on existing hardware.
+                        </p>
+                    </div>
+                </div>
+                <div class="bg-[url('../images/items-bg-one.svg')] bg-no-repeat bg-cover w-[456px] h-[470px]">
+                    <div class="pl-12 pt-[94px]">
+                        <img src="../images/speed.svg" alt="" class="pb-4">
+                        <span class="text-white text-4xl">Performance</span>
+                        <p class="text-white text-base pt-2.5 w-[362px]">
+                            Compilation and minimal runtimes commonly unlock ML workloads on existing hardware.
+                        </p>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!-- <section class="py-40">
+        <div class="container m-auto">
+            <div class="grid sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-3 2xl:grid-cols-3 gap-2 justify-items-center">
+                <div class="w-full h-10 lg:w-80 2xl:w-80 bg-red-700 border-solid border-spacing-2 border-blue-400">Card1
+                </div>
+                <div class="w-full h-10 lg:w-80 2xl:w-80 bg-red-700 border-solid border-spacing-2 border-blue-400">Card2
+                </div>
+                <div class="w-full h-10 lg:w-80 2xl:w-80 bg-red-700 border-solid border-spacing-2 border-blue-400">Card3
+                </div>
+            </div>
+        </div>
+    </section> -->
 </body>
 
 </html>
