brands name and tvm community page design

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
         </div>
     </section>
     <section class="container mx-auto my-[81px]">
-        <div class="flex flex-col max-w-5xl m-auto px-4">
+        <div class="flex flex-col max-w-5xl mx-auto mb-15 px-4">
             <h1 class="text-5xl text-[#252D5A] w-full lg:w-[458px] xl:w-[458px] 2xl:[458px] leading-[55px]">
                 Key Features & Capabilities
             </h1>
@@ -140,10 +140,97 @@
                         </p>
                     </div>
                 </div>
-                
             </div>
         </div>
     </section>
+    <section class="container mx-auto">
+        <div class="flex items-center flex-col border-b-[1px] mb-9 border-[#252D5A]">
+            <p class="text-[38px] leading-[48px] text-[#252D5A] text-center mb-6">Organizations using and contributing
+                to TVM
+            </p>
+            <p class="text-2xl text-[#505D68] w-full lg:w-[944px] 2xl:w-[944px] text-center px-[10px] pb-[54px]">TVM is
+                actively being used and
+                contributed to by developers from many organizations.  This is a community maintained list of
+                organizations using and contributing to tvm in alphabetical order.
+            </p>
+        </div>
+        <div class="grid grid-cols-6 justify-items-center items-center gap-[24px] mb-[77px]">
+            <img src="../images/alicloud.svg" alt="ali-cloud">
+            <img src="../images/amd.svg" alt="ali-cloud">
+            <img src="../images/arm.svg" alt="ali-cloud">
+            <img src="../images/aws.svg" alt="ali-cloud">
+            <img src="../images/edgecortix.svg" alt="ali-cloud">
+            <img src="../images/facebook.svg" alt="ali-cloud">
+            <img src="../images/huawei.svg" alt="ali-cloud">
+            <img src="../images/arm.svg" alt="ali-cloud">
+            <img src="../images/drive.svg" alt="ali-cloud">
+            <img src="../images/microsoft.svg" alt="ali-cloud">
+            <img src="../images/xilinx.svg" alt="ali-cloud">
+            <img src="../images/amd.svg" alt="ali-cloud">
+            <img src="../images/edgecortix.svg" alt="ali-cloud">
+            <img src="../images/qualcommic.svg" alt="ali-cloud">
+            <img src="../images/oasislabs.svg" alt="ali-cloud">
+            <img src="../images/oasislabs.svg" alt="ali-cloud">
+            <img src="../images/amd.svg" alt="ali-cloud">
+            <img src="../images/intel.svg" alt="ali-cloud">
+        </div>
+    </section>
+    <section class="bg-[url('../images/Background-Color.svg')] bg-no-repeat bg-cover">
+        <div class="container m-auto">
+            <p class="text-white text-4xl text-center mb-2 pt-12">
+                Join the TVM Community
+            </p>
+            <p class="text-white text-2xl text-center pb-2">
+                Here are a few ways you can stay involved:
+            </p>
+            <div class="flex justify-center mt-12 gap-[30px] flex-wrap">
+                <div class="bg-white py-[31px] px-[38px] text-center">
+                    <span class="text-2xl text-[#252D5A]">TVM Conference</span>
+                    <p class="text-[#505D68] mt-2 w-[283px]">We are releasing our public roadmaps on github. Please
+                        reach out are interested working in aspects that are not on the roadmap.</p>
+                    <button class="text-white bg-[#252D5A] py-3 px-4 mt-2 text-[12px]">SEE THE PUBLIC ROADMAP</button>
+                </div>
+                <div class="bg-white py-[31px] px-[38px] text-center">
+                    <span class="text-2xl text-[#252D5A]">TVM Conference</span>
+                    <p class="text-[#505D68] mt-2 w-[283px]">We are releasing our public roadmaps on github. Please
+                        reach out are interested working in aspects that are not on the roadmap.</p>
+                    <button class="text-white bg-[#252D5A] py-3 px-4 mt-2 text-[12px]">SEE THE PUBLIC ROADMAP</button>
+                </div>
+                <div class="bg-white py-[31px] px-[38px] text-center">
+                    <span class="text-2xl text-[#252D5A]">TVM Conference</span>
+                    <p class="text-[#505D68] mt-2 w-[283px]">We are releasing our public roadmaps on github. Please
+                        reach out are interested working in aspects that are not on the roadmap.</p>
+                    <button class="text-white bg-[#252D5A] py-3 px-4 mt-2 text-[12px]">SEE THE PUBLIC ROADMAP</button>
+                </div>
+            </div>
+            <div class="flex justify-center mt-[30px] gap-[30px] pb-16 flex-wrap">
+                <div class="bg-white py-[31px] px-[38px] text-center">
+                    <span class="text-2xl text-[#252D5A]">TVM Conference</span>
+                    <p class="text-[#505D68] mt-2 w-[283px]">We are releasing our public roadmaps on github. Please
+                        reach out are interested working in aspects that are not on the roadmap.</p>
+                    <button class="text-white bg-[#252D5A] py-3 px-4 mt-2 text-[12px]">SEE THE PUBLIC ROADMAP</button>
+                </div>
+                <div class="bg-white py-[31px] px-[38px] text-center">
+                    <span class="text-2xl text-[#252D5A]">TVM Conference</span>
+                    <p class="text-[#505D68] mt-2 w-[283px]">We are releasing our public roadmaps on github. Please
+                        reach out are interested working in aspects that are not on the roadmap.</p>
+                    <button class="text-white bg-[#252D5A] py-3 px-4 mt-2 text-[12px]">SEE THE PUBLIC ROADMAP</button>
+                </div>
+                <div class="bg-white py-[31px] px-[38px] text-center">
+                    <span class="text-2xl text-[#252D5A]">TVM Conference</span>
+                    <p class="text-[#505D68] mt-2 w-[283px]">We are releasing our public roadmaps on github. Please
+                        reach out are interested working in aspects that are not on the roadmap.</p>
+                    <button class="text-white bg-[#252D5A] py-3 px-4 mt-2 text-[12px]">SEE THE PUBLIC ROADMAP</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
     <!-- <section class="py-40">
         <div class="container m-auto">
             <div class="grid sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-3 2xl:grid-cols-3 gap-2 justify-items-center">
