--- a/public/index.html
+++ b/public/index.html
@@ -14,59 +14,55 @@
     <link rel="stylesheet" href="../public/output.css">
     <link rel="icon" href="../images/tvm-icon.svg">
     <script src="https://kit.fontawesome.com/c5a43634f6.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
-<style>
-    #check:checked~ul {
-        left: 0;
-    }
-</style>
-
 
 <body>
     <main class="bg-[url('../images/Background-Color.svg')] bg-no-repeat bg-cover">
-        <header>
-            <div class="container py-4 m-auto box-border">
-                <div class="flex justify-between">
-                    <div>
-                        <img src="../images/tvm-header-logo.svg" alt="">
+        <header class="header-fixed py-4">
+            <div class="container px-4 m-auto px-4 box-border">
+                <nav class="flex justify-between">
+                    <img src="../images/tvm-header-logo.svg" alt="">
+                    <div class="flex">
+                        <input type="checkbox" id="check" hidden>
+                        <label for="check" class="flex justify-end text-black text-2xl mr-2 lg:hidden relative z-[999]">
+                            <i class="fa-solid fa-bars"></i>
+                        </label>
+                        <ul
+                            class="flex flex-col items-end lg:items-start 2xl:items-start lg:flex-row 2xl:flex-row gap-8 text-black lg:text-white 2xl:text-white uppercase text-sm fixed lg:relative 2xl:relative top-0 right-[-250px] lg:right-0 2xl:right-0 w-[175px] lg:w-auto 2xl:w-auto transition-all duration-300 lg:transition-none 2xl:transition-none py-16 px-5 lg:py-0 2xl:py-0 lg:px-0 2xl:px-0 bg-white lg:bg-transparent 2xl:bg-transparent h-screen lg:h-auto 2xl:h-auto">
+                            <li class="cursor-pointer hover:text-white hover:underline">
+                                Community
+                            </li>
+                            <li class="cursor-pointer hover:text-white hover:underline">
+                                Download
+                            </li>
+                            <li class="cursor-pointer hover:text-white hover:underline">
+                                Vta
+                            </li>
+                            <li class="cursor-pointer hover:text-white hover:underline">
+                                Blog
+                            </li>
+                            <li class="cursor-pointer hover:text-white hover:underline">
+                                Docs
+                            </li>
+                            <li class="cursor-pointer hover:text-white hover:underline">
+                                Conference
+                            </li>
+                            <li class="cursor-pointer hover:text-white hover:underline">
+                                Github
+                            </li>
+                        </ul>
                     </div>
-                    <input type="checkbox" id="check" hidden>
-                    <label for="check" class="flex justify-end text-white text-2xl mr-2 lg:hidden">
-                        <i class="fa-solid fa-bars"></i>
-                    </label>
-                    <ul
-                        class="flex flex-col items-center lg:items-start 2xl:items-start lg:flex-row 2xl:flex-row gap-8 text-white uppercase text-sm absolute lg:relative 2xl:relative top-10 lg:top-0 left-[-800px] lg:left-0 2xl:left-0 2xl:top-0 w-full lg:w-auto 2xl:w-auto transition-all duration-300 lg:transition-none 2xl:transition-none">
-                        <li class="cursor-pointer hover:text-white hover:underline">
-                            Community
-                        </li>
-                        <li class="cursor-pointer hover:text-white hover:underline">
-                            Download
-                        </li>
-                        <li class="cursor-pointer hover:text-white hover:underline">
-                            Vta
-                        </li>
-                        <li class="cursor-pointer hover:text-white hover:underline">
-                            Blog
-                        </li>
-                        <li class="cursor-pointer hover:text-white hover:underline">
-                            Docs
-                        </li>
-                        <li class="cursor-pointer hover:text-white hover:underline">
-                            Conference
-                        </li>
-                        <li class="cursor-pointer hover:text-white hover:underline">
-                            Github
-                        </li>
-                    </ul>
                     <div class="underline text-white hidden lg:block 2xl:block">
                         ASF
                     </div>
-                </div>
+                </nav>
             </div>
         </header>
         <section>
-            <div class="container m-auto pb-32">
-                <div class="text-white mt-5 lg:mt-[169px] 2xl:mt-[169px]">
+            <div class="container px-4 m-auto pb-32">
+                <div class="text-white pt-5 lg:pt-[169px] 2xl:pt-[169px]">
                     <h1 class="text-[55px]">Apache (incubating) TVM
                     </h1>
                     <p class="text-2xl w-full lg:w-[555px]  2xl:w-[555px]">An End to End Deep Learning Compiler Stack
@@ -85,8 +81,9 @@
             </div>
         </section>
     </main>
-    <section class="container m-auto">
-        <div class="flex flex-col lg:flex-row 2xl:flex-row gap-16 py-6 items-center justify-center">
+    <section class="bg-yellow-500 dark:bg-dark-blue">
+        <div
+            class="container px-4 m-auto flex flex-col lg:flex-row 2xl:flex-row gap-16 py-6 items-center justify-center">
             <img src="../images/AutoOptimization.svg" alt="AutoOptimization">
             <div>
                 <h3 class="text-2xl lg:mb-4 2xl:mb-4 text-[#252D5A]">
@@ -112,7 +109,7 @@
             </div>
         </div>
     </section>
-    <section class="container mx-auto my-[81px]">
+    <section class="container px-4 mx-auto my-[81px]">
         <div class="flex flex-col max-w-5xl mx-auto mb-15 px-4">
             <h1 class="text-5xl text-[#252D5A] w-full lg:w-[458px] xl:w-[458px] 2xl:[458px] leading-[55px]">
                 Key Features & Capabilities
@@ -157,7 +154,7 @@
             </div>
         </div>
     </section>
-    <section class="container mx-auto">
+    <section class="container px-4 mx-auto">
         <div class="flex items-center flex-col border-b-[1px] mb-9 border-[#252D5A]">
             <p class="text-[38px] leading-[48px] text-[#252D5A] text-center mb-6">Organizations using and contributing
                 to TVM
@@ -190,7 +187,7 @@
         </div>
     </section>
     <section class="bg-[url('../images/Background-Color.svg')] bg-no-repeat bg-cover bg-center">
-        <div class="container m-auto">
+        <div class="container px-4 m-auto">
             <p class="text-white text-4xl text-center mb-2 pt-12">
                 Join the TVM Community
             </p>
@@ -252,7 +249,7 @@
         </div>
     </section>
     <section class="bg-footer-bg pt-20 pb-20">
-        <div class="container m-auto">
+        <div class="container px-4 m-auto">
             <ul class="grid grid-cols-1 lg:grid-cols-3 2xl:grid-cols-3 justify-items-center">
                 <li>
                     <h3 class="text-white text-4xl cursor-pointer">Docs</h3>
@@ -285,7 +282,7 @@
         </div>
     </section>
     <section class="bg-dark-blue pb-11">
-        <div class="container m-auto">
+        <div class="container px-4 m-auto">
             <div
                 class="flex flex-col lg:flex-row 2xl:flex-row lg:justify-between 2xl:justify-between items-center border-b-2 border-b-[#252D5A] pt-5 pb-4">
                 <img src="../images/tvm-header-logo.svg" alt="tvm-icon">
@@ -303,6 +300,26 @@
             </p>
         </div>
     </section>
+
+<!-- --------------------------Dark mode customized theme btn------------------------ -->
+    <!-- <section class="py-16">
+        <div class="container m-auto">
+            <div class="w-[500px] h-[500px]">
+                <button class="p-5 bg-click-me text-white dark:bg-dark-click-me">click me</button>
+            </div>
+        </div>
+    </section> -->
+
 </body>
+<script>
+    $(window).scroll(function () {
+        if ($(this).scrollTop() > 1) {
+            $('header').addClass("header-fixed");
+        }
+        else {
+            $('header').removeClass("header-fixed"); 
+        }
+    });
+</script>
 
 </html>
